# smaug

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: dev.workflow.yaml
src/: main.rs
src/api/: app_state.rs  mod.rs  state.rs
src/api/controllers/: lock.rs  mod.rs  state.rs
src/api/types/: environment.rs  lock.rs  mod.rs  project.rs  user.rs
src/types/: environment.rs  lock.rs  project.rs  state.rs
