[package]
name = "einherjar"
version = "0.1.0"
authors = ["Alexandre Bouthinon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", default-features = false, features = ["v4"] }

[dev-dependencies]
rusty-hook = "^0.11.2"