[package]
name = "einherjar"
version = "0.1.0"
authors = ["Alexandre Bouthinon"]
edition = "2021"

[dependencies]
actix-web = "3"
env_logger = "0.9.0"
serde = { version = "1.0" }
serde_json = "1.0"
uuid = { version = "0.8.2", default-features = false, features = ["v4", "serde"] }

[dev-dependencies]
rusty-hook = "^0.11.2"